[package]
name = "vis-rs"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
fftw = "0.6.2"
sdl2 = "0.34.3"

#[profile.dev]
#lto = "fat"
#opt-level = 3
#codegen-units = 1

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false